pkg/front_end/testcases/inference/infer_type_regardless_of_declaration_order_or_cycles.dart.strong.expect
library test;
import self as self;
import "./infer_type_regardless_of_declaration_order_or_cycles_b.dart" as inf;
import "dart:core" as core;

class C extends inf::B {
  default constructor •() → void
    : super inf::B::•()
    ;
  get x() → core::int
    return null;
}
class A extends core::Object {
  default constructor •() → void
    : super core::Object::•()
    ;
  get x() → core::int
    return 0;
}
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/infer_type_regardless_of_declaration_order_or_cycles.dart:20:10: Error: A value of type 'dart.core::int' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n  String z = /*error:INVALID_ASSIGNMENT*/ new C(). /*@target=C::x*/ x;\n         ^"]/* from null */;
static method foo() → dynamic {
  core::int y = new self::C::•().{self::C::x};
  core::String z = new self::C::•().{self::C::x} as{TypeError} core::String;
}
static method main() → dynamic {
  self::foo();
}
